--- a/index.html
+++ b/index.html
@@ -48,3 +48,6 @@
     <script src="script.js"></script>
   </body>
 </html>
+
+//this has been changed by Akash kumar on the date of 23 sept at 02:16 for just
+shake of check!
